[package]
name = "web-browser"
version = "0.1.0"
edition = "2021"
description = "QUIC-native web browser using iroh P2P networking with marginalia.nu search"
repository = "https://github.com/plurigrid/web-browser"

[dependencies]
iroh = "0.34"
iroh-blobs = "0.34"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http3", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
html2text = "0.12"
